Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj1/.BulkUnlinkTestProj1.Project.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlinkTestProj1.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1xhnYaaRSylhHoz0c9OGuZ",
+    "id" : "9vyNtlBSkhfgIQ0pJ8tIsb",
     "name" : "BulkUnlinkTestProj1",
     "type" : "Project",
     "metadata" : {
