--- a/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8q9VyTgcwlrh0uT4zMp66m",
+    "id" : "27oJXY9i8NUgjQbiJ2pyST",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000FNB"
+        "repoHandle" : "01001O17000000000FO2"
       },
       "contextAttributes" : [ {
         "name" : "id",
