Automation summary for Force Undo Checkout testsNDNjMzRiOWYtMzkxNi00NT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "14AJfDxZh0Ng2RGKbhbFu5",
+    "id" : "5HqUsc7dQ4VbSsnmBWSQ2t",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
