Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "f5YsKDJL12vfLA0wQh8y6v",
+    "id" : "5mk4tBaNNuOkoscbdLiYMm",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
