--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5VrqanfmOQqh8QruLx21ca",
+    "id" : "2yYzZxGqzwDjmDwTng6GS3",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
