Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj1/.BulkUnlinkTestProj1.Project.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlinkTestProj1.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9Qdc1ScxZnKcR9vm38uUWh",
+    "id" : "2pAJ5j2hjnWfjuE8F6kSei",
     "name" : "BulkUnlinkTestProj1",
     "type" : "Project",
     "metadata" : {
