--- a/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "20vVFfVT42xiH4DNXpbumn",
+    "id" : "9XfIl9TIBUzibA11t4u1QP",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000BG9"
+        "repoHandle" : "01004J17000000000BGK"
       },
       "contextAttributes" : [ {
         "name" : "id",
