Automation summary for Force Undo Checkout testsNzQ4YTgyZGMtZWZmZC00Yj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "14AJfDxZh0Ng2RGKbhbFu5",
+    "id" : "0rfStqO5fc9j5Y04Xc8XiM",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
