Automation summary for Force Undo Checkout testsOTlkY2FjMmYtOWE5NC00NT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2TATwn5LOmnlpPJHsKn4GG",
+    "id" : "8gPrPnf8NricizLRTT3P88",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
