--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7j7ka3smouClefrsJYkfGk",
+    "id" : "ficDpZ4ZhGGiZmHl4X5ZE2",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000C74"
+        "repoHandle" : "01004J17000000000CCZ"
       },
       "contextAttributes" : [ {
         "name" : "id",
