--- a/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9b6Anzg1BW8lf3mPDA6hEF",
+    "id" : "embWv9tLSwiivpa3nlBO0a",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000C71"
+        "repoHandle" : "01004J17000000000CCX"
       },
       "contextAttributes" : [ {
         "name" : "id",
