--- a/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "34B95zwBMsal8OFa9bOlmD",
+    "id" : "2x8rJDmHAHchLDl4NyWN6N",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000C70"
+        "repoHandle" : "01004J17000000000CCY"
       },
       "contextAttributes" : [ {
         "name" : "id",
