--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "43LCi2HaWRAl6shug0WxYY",
+    "id" : "4MTLSA42yMJjhx6PmMXFY9",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000C75"
+        "repoHandle" : "01004J17000000000CD2"
       },
       "contextAttributes" : [ {
         "name" : "id",
