--- a/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6nuaKEARjaDg113MNehBaZ",
+    "id" : "0uXud5n8iAolv7pHzqiqoa",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01004J17000000000C6Y"
+        "repoHandle" : "01004J17000000000CCV"
       },
       "contextAttributes" : [ {
         "name" : "id",
