Multi checkin assets
Description for Multi checkin assets

--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "cxj3Httc7Ivk66PWt3bA0T",
+    "id" : "i76yLBZA0sceEzHov2dkC6",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000GDB"
+        "repoHandle" : "01001O17000000000GDO"
       },
       "contextAttributes" : [ {
         "name" : "id",
