--- a/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "11PqYjpW9VflSbQ5z17oc5",
+    "id" : "kUk42GeELwikmC3gMmhTiG",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000GD9"
+        "repoHandle" : "01001O17000000000GDL"
       },
       "contextAttributes" : [ {
         "name" : "id",
