--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5WmZW8x6oozf5PuziVWkqU",
+    "id" : "4wJNRm6wOrCjybjkJbHQI5",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000GDC"
+        "repoHandle" : "01001O17000000000GDN"
       },
       "contextAttributes" : [ {
         "name" : "id",
