--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0ODeecLFYQtkjMxYtNcY2Z",
+    "id" : "92Sjl9ydSgzlPYVAOp1e0e",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001O17000000000GDD"
+        "repoHandle" : "01001O17000000000GDP"
       },
       "contextAttributes" : [ {
         "name" : "id",
