Automation summary for Force Undo Checkout testsNzI1NmIzNDItMzcyMC00ZD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8tsNwaGvsaZdTG3Six0oit",
+    "id" : "bPH1ZmY1SG0cc9HvmvYiKZ",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
