Automation summary for Force Undo Checkout testsODhjYThmNDItYzAwNS00Yj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "bPH1ZmY1SG0cc9HvmvYiKZ",
+    "id" : "iXdoawViqSadWJCG8PqLAp",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
